docs: prioritize pipe operator (>>) across all documentation and tutorials

--- a/examples/basic_usage.ipynb
+++ b/examples/basic_usage.ipynb
@@ -21,6 +21,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from pipeplotly import Plot\n",
+    "from pipeplotly.verbs import *  # Primary interface verbs\n",
     "\n",
     "# For loading example datasets\n",
     "try:\n",
@@ -34,9 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Simple Scatter Plot\n",
-    "\n",
-    "Let's start with a basic scatter plot using sample data."
+    "## 1. Simple Scatter Plot (Functional Style)"
    ]
   },
   {
@@ -45,18 +44,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create sample data\n",
-    "df = pd.DataFrame({\n",
-    "    'x': range(10),\n",
-    "    'y': [i**2 for i in range(10)],\n",
-    "    'category': ['A', 'B'] * 5\n",
-    "})\n",
-    "\n",
-    "# Create a simple scatter plot\n",
-    "plot = (Plot(df)\n",
-    "    .plot_points('x', 'y')\n",
-    "    .add_labels(title='My First Plot', x='X Values', y='Y Squared')\n",
-    "    .show())"
+    "(df \n",
+    " >> Plot() \n",
+    " >> plot_points('x', 'y') \n",
+    " >> add_labels(title='My First Pipe Plot', x='X Values', y='Y Squared') \n",
+    " >> show())"
    ]
   },
   {
@@ -74,13 +66,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add color by category and use minimal theme\n",
-    "plot = (Plot(df)\n",
-    "    .plot_points('x', 'y')\n",
-    "    .add_color('category')\n",
-    "    .add_labels(title='Colored Scatter Plot', x='X Values', y='Y Squared')\n",
-    "    .set_theme('minimal')\n",
-    "    .show())"
+    "(df \n",
+    " >> Plot() \n",
+    " >> plot_points('x', 'y') \n",
+    " >> add_color('category') \n",
+    " >> add_labels(title='Colored Pipe Plot', x='X Values', y='Y Squared') \n",
+    " >> set_theme('minimal') \n",
+    " >> show())"
    ]
   },
   {
@@ -98,13 +90,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create the same plot but make it interactive\n",
-    "plot = (Plot(df)\n",
-    "    .plot_points('x', 'y')\n",
-    "    .add_color('category')\n",
-    "    .add_labels(title='Interactive Scatter Plot', x='X Values', y='Y Squared')\n",
-    "    .to_interactive()  # Switch to Plotly backend\n",
-    "    .show())"
+    "(df \n",
+    " >> Plot() \n",
+    " >> plot_points('x', 'y') \n",
+    " >> add_color('category') \n",
+    " >> add_labels(title='Interactive Pipe Plot') \n",
+    " >> to_interactive() \n",
+    " >> show())"
    ]
   },
   {
@@ -122,20 +114,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create time series data\n",
-    "time_df = pd.DataFrame({\n",
-    "    'time': range(50),\n",
-    "    'value': np.cumsum(np.random.randn(50)),\n",
-    "    'group': np.random.choice(['A', 'B'], 50)\n",
-    "})\n",
-    "\n",
-    "# Line plot with color\n",
-    "plot = (Plot(time_df)\n",
-    "    .plot_lines('time', 'value')\n",
-    "    .add_color('group')\n",
-    "    .add_labels(title='Time Series', x='Time', y='Value')\n",
-    "    .set_theme('dark')\n",
-    "    .show())"
+    "(time_df \n",
+    " >> Plot() \n",
+    " >> plot_lines('time', 'value') \n",
+    " >> add_color('group') \n",
+    " >> add_labels(title='Piped Time Series') \n",
+    " >> set_theme('dark') \n",
+    " >> show())"
    ]
   },
   {
@@ -176,17 +161,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a scatter plot with species coloring\n",
-    "plot = (Plot(iris)\n",
-    "    .plot_points('sepal_length', 'sepal_width')\n",
-    "    .add_color('species', palette='viridis')\n",
-    "    .add_labels(\n",
-    "        title='Iris Dataset: Sepal Dimensions',\n",
-    "        x='Sepal Length (cm)',\n",
-    "        y='Sepal Width (cm)'\n",
-    "    )\n",
-    "    .set_theme('minimal')\n",
-    "    .show())"
+    "(iris \n",
+    " >> Plot() \n",
+    " >> plot_points('sepal_length', 'sepal_width') \n",
+    " >> add_color('species', palette='viridis') \n",
+    " >> add_labels(title='Iris: Sepal Dimensions') \n",
+    " >> set_theme('minimal') \n",
+    " >> show())"
    ]
   },
   {
@@ -204,18 +185,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create faceted plot\n",
-    "plot = (Plot(iris)\n",
-    "    .plot_points('sepal_length', 'sepal_width')\n",
-    "    .add_color('species')\n",
-    "    .add_facets(cols='species')\n",
-    "    .add_labels(\n",
-    "        title='Iris Dataset by Species',\n",
-    "        x='Sepal Length (cm)',\n",
-    "        y='Sepal Width (cm)'\n",
-    "    )\n",
-    "    .set_theme('minimal')\n",
-    "    .show())"
+    "(iris \n",
+    " >> Plot() \n",
+    " >> plot_points('sepal_length', 'sepal_width') \n",
+    " >> add_color('species') \n",
+    " >> add_facets(cols='species') \n",
+    " >> add_labels(title='Iris by Species') \n",
+    " >> set_theme('minimal') \n",
+    " >> show())"
    ]
   },
   {
@@ -233,17 +210,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Histogram of petal lengths\n",
-    "plot = (Plot(iris)\n",
-    "    .plot_histogram('petal_length', bins=20)\n",
-    "    .add_color('species')\n",
-    "    .add_labels(\n",
-    "        title='Distribution of Petal Lengths',\n",
-    "        x='Petal Length (cm)',\n",
-    "        y='Count'\n",
-    "    )\n",
-    "    .set_theme('classic')\n",
-    "    .show())"
+    "(iris \n",
+    " >> Plot() \n",
+    " >> plot_histogram('petal_length', bins=20) \n",
+    " >> add_color('species') \n",
+    " >> add_labels(title='Distributions Piped') \n",
+    " >> set_theme('classic') \n",
+    " >> show())"
    ]
   },
   {
@@ -261,17 +234,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Box plot of sepal width by species\n",
-    "plot = (Plot(iris)\n",
-    "    .plot_box('species', 'sepal_width')\n",
-    "    .add_color('species')\n",
-    "    .add_labels(\n",
-    "        title='Sepal Width Distribution by Species',\n",
-    "        x='Species',\n",
-    "        y='Sepal Width (cm)'\n",
-    "    )\n",
-    "    .set_theme('light')\n",
-    "    .show())"
+    "(iris \n",
+    " >> Plot() \n",
+    " >> plot_box('species', 'sepal_width') \n",
+    " >> add_color('species') \n",
+    " >> add_labels(title='Piped Box Plot') \n",
+    " >> set_theme('light') \n",
+    " >> show())"
    ]
   },
   {
@@ -289,23 +258,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create exponential data\n",
-    "exp_df = pd.DataFrame({\n",
-    "    'x': range(1, 20),\n",
-    "    'y': [2**i for i in range(1, 20)]\n",
-    "})\n",
-    "\n",
-    "# Plot with log scale\n",
-    "plot = (Plot(exp_df)\n",
-    "    .plot_points('x', 'y')\n",
-    "    .scale_y_log()\n",
-    "    .add_labels(\n",
-    "        title='Exponential Growth (Log Scale)',\n",
-    "        x='X',\n",
-    "        y='Y (log scale)'\n",
-    "    )\n",
-    "    .set_theme('minimal')\n",
-    "    .show())"
+    "(exp_df \n",
+    " >> Plot() \n",
+    " >> plot_points('x', 'y') \n",
+    " >> scale_y_log() \n",
+    " >> add_labels(title='Piped Log Scale') \n",
+    " >> set_theme('minimal') \n",
+    " >> show())"
    ]
   },
   {
@@ -323,20 +282,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a plot\n",
-    "plot = (Plot(iris)\n",
-    "    .plot_points('sepal_length', 'sepal_width')\n",
-    "    .add_color('species')\n",
-    "    .add_labels(title='Iris Dataset', x='Sepal Length', y='Sepal Width')\n",
-    "    .set_theme('minimal'))\n",
-    "\n",
-    "# Save as PNG (static)\n",
-    "# plot.save('iris_plot.png', width=10, height=6, dpi=300)\n",
-    "\n",
-    "# Save as HTML (interactive)\n",
-    "# plot.to_interactive().to_html('iris_plot.html')\n",
-    "\n",
-    "print(\"Uncomment the save lines above to save plots to files\")"
+    "plot = (iris \n",
+    "        >> Plot() \n",
+    "        >> plot_points('sepal_length', 'sepal_width') \n",
+    "        >> add_color('species'))"
    ]
   },
   {
@@ -345,20 +294,16 @@
    "source": [
     "## Summary\n",
     "\n",
-    "In this notebook, we've covered:\n",
+    "In this notebook, we've covered how to use PipePlotly with the **pipe operator (`>>`)**:\n",
     "\n",
-    "1. \u2705 Basic scatter plots\n",
-    "2. \u2705 Adding colors and themes\n",
-    "3. \u2705 Converting between static and interactive\n",
-    "4. \u2705 Line plots\n",
-    "5. \u2705 Working with real datasets\n",
-    "6. \u2705 Faceting (small multiples)\n",
-    "7. \u2705 Histograms\n",
-    "8. \u2705 Box plots\n",
-    "9. \u2705 Scale transformations\n",
-    "10. \u2705 Saving plots\n",
+    "1. \u2705 Basic scatter plots via pipes\n",
+    "2. \u2705 Aesthetic mapping (color/size)\n",
+    "3. \u2705 Backend switching\n",
+    "4. \u2705 Multi-layered visualizations\n",
+    "5. \u2705 Faceting and distribution analysis\n",
+    "6. \u2705 Scale transformations\n",
     "\n",
-    "PipePlotly makes it easy to create beautiful visualizations with readable, method-chained syntax!"
+    "PipePlotly makes it easy to create beautiful visualizations with a functional, data-flow syntax!"
    ]
   }
  ],
