docs: remove smoothing note and add pipe pronunciation guide across all docs

--- a/examples/basic_usage.ipynb
+++ b/examples/basic_usage.ipynb
@@ -12,6 +12,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> [!TIP]\n",
+    "> **How to read the `>>` operator:** \n",
+    "> Read it as **\"pipe to\"** or **\"and then\"**. For example, `df >> Plot() >> show()` is read as *\"take the dataframe, **pipe it to** a Plot, **and then** show it.\"*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -39,6 +48,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> [!TIP]\n",
+    "> **How to read the `>>` operator:** \n",
+    "> Read it as **\"pipe to\"** or **\"and then\"**. For example, `df >> Plot() >> show()` is read as *\"take the dataframe, **pipe it to** a Plot, **and then** show it.\"*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -58,6 +76,15 @@
     "## 2. Adding Color and Theme\n",
     "\n",
     "Now let's add color mapping and apply a theme."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> [!TIP]\n",
+    "> **How to read the `>>` operator:** \n",
+    "> Read it as **\"pipe to\"** or **\"and then\"**. For example, `df >> Plot() >> show()` is read as *\"take the dataframe, **pipe it to** a Plot, **and then** show it.\"*"
    ]
   },
   {
@@ -85,6 +112,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> [!TIP]\n",
+    "> **How to read the `>>` operator:** \n",
+    "> Read it as **\"pipe to\"** or **\"and then\"**. For example, `df >> Plot() >> show()` is read as *\"take the dataframe, **pipe it to** a Plot, **and then** show it.\"*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -109,6 +145,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> [!TIP]\n",
+    "> **How to read the `>>` operator:** \n",
+    "> Read it as **\"pipe to\"** or **\"and then\"**. For example, `df >> Plot() >> show()` is read as *\"take the dataframe, **pipe it to** a Plot, **and then** show it.\"*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -130,6 +175,15 @@
     "## 5. Working with Real Data (Iris Dataset)\n",
     "\n",
     "Let's use the famous Iris dataset to create more complex visualizations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> [!TIP]\n",
+    "> **How to read the `>>` operator:** \n",
+    "> Read it as **\"pipe to\"** or **\"and then\"**. For example, `df >> Plot() >> show()` is read as *\"take the dataframe, **pipe it to** a Plot, **and then** show it.\"*"
    ]
   },
   {
@@ -180,6 +234,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> [!TIP]\n",
+    "> **How to read the `>>` operator:** \n",
+    "> Read it as **\"pipe to\"** or **\"and then\"**. For example, `df >> Plot() >> show()` is read as *\"take the dataframe, **pipe it to** a Plot, **and then** show it.\"*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -202,6 +265,15 @@
     "## 7. Histogram\n",
     "\n",
     "Explore distributions with histograms."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> [!TIP]\n",
+    "> **How to read the `>>` operator:** \n",
+    "> Read it as **\"pipe to\"** or **\"and then\"**. For example, `df >> Plot() >> show()` is read as *\"take the dataframe, **pipe it to** a Plot, **and then** show it.\"*"
    ]
   },
   {
@@ -229,6 +301,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> [!TIP]\n",
+    "> **How to read the `>>` operator:** \n",
+    "> Read it as **\"pipe to\"** or **\"and then\"**. For example, `df >> Plot() >> show()` is read as *\"take the dataframe, **pipe it to** a Plot, **and then** show it.\"*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -253,6 +334,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> [!TIP]\n",
+    "> **How to read the `>>` operator:** \n",
+    "> Read it as **\"pipe to\"** or **\"and then\"**. For example, `df >> Plot() >> show()` is read as *\"take the dataframe, **pipe it to** a Plot, **and then** show it.\"*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -274,6 +364,15 @@
     "## 10. Saving Plots\n",
     "\n",
     "Save your plots to various file formats."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> [!TIP]\n",
+    "> **How to read the `>>` operator:** \n",
+    "> Read it as **\"pipe to\"** or **\"and then\"**. For example, `df >> Plot() >> show()` is read as *\"take the dataframe, **pipe it to** a Plot, **and then** show it.\"*"
    ]
   },
   {
@@ -304,6 +403,15 @@
     "6. \u2705 Scale transformations\n",
     "\n",
     "PipePlotly makes it easy to create beautiful visualizations with a functional, data-flow syntax!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> [!TIP]\n",
+    "> **How to read the `>>` operator:** \n",
+    "> Read it as **\"pipe to\"** or **\"and then\"**. For example, `df >> Plot() >> show()` is read as *\"take the dataframe, **pipe it to** a Plot, **and then** show it.\"*"
    ]
   }
  ],
