--- a/examples/pipe_operator_examples.ipynb
+++ b/examples/pipe_operator_examples.ipynb
@@ -22,10 +22,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> [!TIP]\n",
+    "> **How to read the `>>` operator:** \n",
+    "> Read it as **\"pipe to\"** or **\"and then\"**. For example, `df >> Plot() >> show()` is read as *\"take the dataframe, **pipe it to** a Plot, **and then** show it.\"*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2. Core Philosophy\n",
     "- **Immutability:** Every operation returns a new `Plot` object, preserving the original state.\n",
     "- **Backend Agnostic:** Switch between static (`plotnine`) and interactive (`Plotly`) modes with a single verb.\n",
     "- **Readability:** Code should read like a sentence."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> [!TIP]\n",
+    "> **How to read the `>>` operator:** \n",
+    "> Read it as **\"pipe to\"** or **\"and then\"**. For example, `df >> Plot() >> show()` is read as *\"take the dataframe, **pipe it to** a Plot, **and then** show it.\"*"
    ]
   },
   {
@@ -47,7 +65,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> [!TIP]\n",
+    "> **How to read the `>>` operator:** \n",
+    "> Read it as **\"pipe to\"** or **\"and then\"**. For example, `df >> Plot() >> show()` is read as *\"take the dataframe, **pipe it to** a Plot, **and then** show it.\"*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 4. Setup & Imports"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> [!TIP]\n",
+    "> **How to read the `>>` operator:** \n",
+    "> Read it as **\"pipe to\"** or **\"and then\"**. For example, `df >> Plot() >> show()` is read as *\"take the dataframe, **pipe it to** a Plot, **and then** show it.\"*"
    ]
   },
   {
@@ -102,7 +138,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> [!TIP]\n",
+    "> **How to read the `>>` operator:** \n",
+    "> Read it as **\"pipe to\"** or **\"and then\"**. For example, `df >> Plot() >> show()` is read as *\"take the dataframe, **pipe it to** a Plot, **and then** show it.\"*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 5.1 Scatter Plots (`plot_points`)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> [!TIP]\n",
+    "> **How to read the `>>` operator:** \n",
+    "> Read it as **\"pipe to\"** or **\"and then\"**. For example, `df >> Plot() >> show()` is read as *\"take the dataframe, **pipe it to** a Plot, **and then** show it.\"*"
    ]
   },
   {
@@ -126,6 +180,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> [!TIP]\n",
+    "> **How to read the `>>` operator:** \n",
+    "> Read it as **\"pipe to\"** or **\"and then\"**. For example, `df >> Plot() >> show()` is read as *\"take the dataframe, **pipe it to** a Plot, **and then** show it.\"*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -143,6 +206,15 @@
    "metadata": {},
    "source": [
     "### 5.3 Bar Charts (`plot_bars`)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> [!TIP]\n",
+    "> **How to read the `>>` operator:** \n",
+    "> Read it as **\"pipe to\"** or **\"and then\"**. For example, `df >> Plot() >> show()` is read as *\"take the dataframe, **pipe it to** a Plot, **and then** show it.\"*"
    ]
   },
   {
@@ -166,6 +238,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> [!TIP]\n",
+    "> **How to read the `>>` operator:** \n",
+    "> Read it as **\"pipe to\"** or **\"and then\"**. For example, `df >> Plot() >> show()` is read as *\"take the dataframe, **pipe it to** a Plot, **and then** show it.\"*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -183,6 +264,15 @@
    "metadata": {},
    "source": [
     "### 5.5 Box & Violin Plots "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> [!TIP]\n",
+    "> **How to read the `>>` operator:** \n",
+    "> Read it as **\"pipe to\"** or **\"and then\"**. For example, `df >> Plot() >> show()` is read as *\"take the dataframe, **pipe it to** a Plot, **and then** show it.\"*"
    ]
   },
   {
@@ -204,6 +294,15 @@
    "source": [
     "## 6. Aesthetics & Mapping\n",
     "Aesthetics map data variables to visual properties."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> [!TIP]\n",
+    "> **How to read the `>>` operator:** \n",
+    "> Read it as **\"pipe to\"** or **\"and then\"**. For example, `df >> Plot() >> show()` is read as *\"take the dataframe, **pipe it to** a Plot, **and then** show it.\"*"
    ]
   },
   {
@@ -231,6 +330,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> [!TIP]\n",
+    "> **How to read the `>>` operator:** \n",
+    "> Read it as **\"pipe to\"** or **\"and then\"**. For example, `df >> Plot() >> show()` is read as *\"take the dataframe, **pipe it to** a Plot, **and then** show it.\"*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -255,9 +363,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> [!IMPORTANT]\n",
-    "> **Smoothing Dependency:** The `loess` method used in `add_smooth` requires the `scikit-misc` package. \n",
-    "> Install it using: `pip install scikit-misc`"
+    "> [!TIP]\n",
+    "> **How to read the `>>` operator:** \n",
+    "> Read it as **\"pipe to\"** or **\"and then\"**. For example, `df >> Plot() >> show()` is read as *\"take the dataframe, **pipe it to** a Plot, **and then** show it.\"*"
    ]
   },
   {
@@ -279,6 +387,15 @@
    "metadata": {},
    "source": [
     "## 9. Scales & Coordinates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> [!TIP]\n",
+    "> **How to read the `>>` operator:** \n",
+    "> Read it as **\"pipe to\"** or **\"and then\"**. For example, `df >> Plot() >> show()` is read as *\"take the dataframe, **pipe it to** a Plot, **and then** show it.\"*"
    ]
   },
   {
@@ -317,6 +434,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> [!TIP]\n",
+    "> **How to read the `>>` operator:** \n",
+    "> Read it as **\"pipe to\"** or **\"and then\"**. For example, `df >> Plot() >> show()` is read as *\"take the dataframe, **pipe it to** a Plot, **and then** show it.\"*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -336,6 +462,15 @@
    "source": [
     "## 11. Backend Interchangeability\n",
     "Switch between static (plotnine) and interactive (Plotly) modes easily."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> [!TIP]\n",
+    "> **How to read the `>>` operator:** \n",
+    "> Read it as **\"pipe to\"** or **\"and then\"**. For example, `df >> Plot() >> show()` is read as *\"take the dataframe, **pipe it to** a Plot, **and then** show it.\"*"
    ]
   },
   {
@@ -361,6 +496,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> [!TIP]\n",
+    "> **How to read the `>>` operator:** \n",
+    "> Read it as **\"pipe to\"** or **\"and then\"**. For example, `df >> Plot() >> show()` is read as *\"take the dataframe, **pipe it to** a Plot, **and then** show it.\"*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -380,6 +524,15 @@
    "source": [
     "## 13. PipeFrame Integration\n",
     "PipePlotly is built to work seamlessly with `pipeframe` for unified data and visualization pipelines."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> [!TIP]\n",
+    "> **How to read the `>>` operator:** \n",
+    "> Read it as **\"pipe to\"** or **\"and then\"**. For example, `df >> Plot() >> show()` is read as *\"take the dataframe, **pipe it to** a Plot, **and then** show it.\"*"
    ]
   },
   {
